# mini-assignment-autograder-package

./: .gitignore  CITATION.md  LICENSE.md  README.md  check_script.py  pyproject.toml  setup.py  spreadsheet_updater.py
autograder/: all_submissions_checker.py  checker.py  importer.py  spreadsheet_updater.py  template_checker.py
config/: config.json
examples/favourite_number/: hw_checker.py  mini-0.html  mini-0.md
favourite_number/: hw_checker.py  mini-1.md
mini_assignment_autograder/: __init__.py  all_submissions_checker.py  checker.py  spreadsheet_updater.py  template_checker.py
